--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,10 @@ version = mod_version
 group = mod_group_id
 
 repositories {
-    mavenLocal()
+    maven {
+        name = "Curios"
+        url = "https://maven.theillusivec4.top/"
+    }
 }
 
 base {
@@ -130,6 +133,13 @@ dependencies {
 
     // Example project dependency using a sister or child project:
     // implementation project(":myproject")
+
+    // Compile against only the API artifact
+    compileOnly "top.theillusivec4.curios:curios-neoforge:9.2.2+1.21.1:api"
+    // Use the full Curios API jar at runtime
+    runtimeOnly "top.theillusivec4.curios:curios-neoforge:9.2.2+1.21.1"
+
+    implementation "top.theillusivec4.curios:curios-neoforge:9.2.2+1.21.1"
 
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
